src/tools/snapshots/rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_all_features_args.snap
---
source: src/tools/cargo_insta.rs
expression: args
---
[
    "test",
    "--all-features",
    "--quiet",
]
