src/tools/snapshots/rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_default_args.snap
---
source: src/tools/cargo_insta.rs
expression: args
---
[
    "insta",
    "test",
    "--accept",
    "--workspace",
]
