src/tools/snapshots/rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_features_and_targets_args.snap
---
source: src/tools/cargo_insta.rs
expression: args
---
[
    "test",
    "--lib",
    "--features",
    "serde,async",
    "--no-default-features",
    "--jobs",
    "4",
    "--quiet",
]
